# foris-controller-foris-client

./: .gitlab-ci.yml  CHANGELOG.rst  README.rst  pyproject.toml  setup.py  tox.ini
foris_client/: __init__.py  utils.py
foris_client/buses/: base.py  mqtt.py  ubus.py  unix_socket.py
foris_client/client/: __main__.py
foris_client/listener/: __main__.py
tests/: conftest.py  fixtures.py  test_mqtt.py  test_ubus.py  test_unix_socket.py
